--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule ^/?(.*) https://www.warp-code.fr/$1 [R,L]
-Header always set Strict-Transport-Security "max-age=60"
+Header always set Strict-Transport-Security "max-age=15778800"
