--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,5 @@ RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule ^/?(.*) https://www.warp-code.fr/$1 [R,L]
 Header always set Strict-Transport-Security "max-age=15778800"
+
+Options -Indexes
