--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,4 @@ RewriteRule ^/?(.*) https://www.warp-code.fr/$1 [R,L]
 Header always set Strict-Transport-Security "max-age=15778800"
 
 Options -Indexes
+Header append X-FRAME-OPTIONS "DENY"
