--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,13 @@ Header always set Strict-Transport-Security "max-age=15778800"
 Options -Indexes
 Header append X-FRAME-OPTIONS "DENY"
 
+
+
+<IfModule mod_headers.c>
+Header always set X-XSS-Protection "1; mode=block"
+Header always set X-Content-Type-Options "nosniff"
+</IfModule>
+
 <IfModule mod_expires.c>
  ExpiresActive on
  ExpiresDefault "access plus 1 month"
@@ -19,8 +26,8 @@ Header append X-FRAME-OPTIONS "DENY"
  ExpiresByType font/opentype "access plus 1 month"
  ExpiresByType application/x-font-woff "access plus 1 month"
  ExpiresByType application/vnd.ms-fontobject "access plus 1 month"
- ExpiresByType application/javascript "access plus 1 year"
- ExpiresByType text/javascript "access plus 1 year"
- ExpiresByType text/js "access plus 1 year"
+ ExpiresByType application/javascript "access plus 1 month"
+ ExpiresByType text/javascript "access plus 1 month"
+ ExpiresByType text/js "access plus 1 month"
  ExpiresByType application/x-javascript "access plus 1 year"
  </IfModule>
