--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,30 @@
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule ^/?(.*) https://www.warp-code.fr/$1 [R,L]
-Header always set Strict-Transport-Security "max-age=15778800"
+Header always set Strict-Transport-Security "max-age=31536000"
 Options -Indexes
 Header append X-FRAME-OPTIONS "DENY"
 Header always set X-XSS-Protection "1; mode=block"
 Header always set X-Content-Type-Options "nosniff"
 Header always set Content-Security-Policy "media-src 'self'; object-src 'none'; script-src 'self' https://www.google.com https://apis.google.com https://maps.googleapis.com https://platform.twitter.com https://connect.facebook.net https://www.gstatic.com; report-uri /csp-violation-report-endpoint/"
+Header edit Set-Cookie ^(.*)$ $1;HttpOnly;Secure
 
-
+<IfModule mod_headers.c>
+<FilesMatch "\\.(ico|jpe?g|png|gif|swf)$">
+Header set Cache-Control "max-age=2692000, public"
+</FilesMatch>
+<FilesMatch "\\.(css)$">
+Header set Cache-Control "max-age=2692000, public"
+</FilesMatch>
+<FilesMatch "\\.(js)$">
+Header set Cache-Control "max-age=216000, private"
+</FilesMatch>
+<FilesMatch "\\.(x?html?|php)$">
+Header set Cache-Control "max-age=600, private, must-revalidate"
+</FilesMatch>
+Header unset ETag
+Header unset Last-Modified
+</IfModule>
 
 <IfModule mod_expires.c>
  ExpiresActive on
@@ -18,6 +34,7 @@ Header always set Content-Security-Policy "media-src 'self'; object-src 'none'; 
  ExpiresByType image/png "access plus 1 month"
  ExpiresByType image/jpg "access plus 1 month"
  ExpiresByType image/jpeg "access plus 1 month"
+ ExpiresByType image/svg+xml "access plus 1 month"
  ExpiresByType video/mp4 "access plus 1 month"
  ExpiresByType text/x-component "access plus 1 month"
  ExpiresByType font/truetype "access plus 1 month"
@@ -25,6 +42,7 @@ Header always set Content-Security-Policy "media-src 'self'; object-src 'none'; 
  ExpiresByType application/x-font-woff "access plus 1 month"
  ExpiresByType application/vnd.ms-fontobject "access plus 1 month"
  ExpiresByType application/javascript "access plus 1 month"
+ ExpiresByType text/css "access plus 1 month"
  ExpiresByType text/javascript "access plus 1 month"
  ExpiresByType text/js "access plus 1 month"
  ExpiresByType application/x-javascript "access plus 1 year"
