--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ Options -Indexes
 Header append X-FRAME-OPTIONS "DENY"
 Header always set X-XSS-Protection "1; mode=block"
 Header always set X-Content-Type-Options "nosniff"
-Header always set Content-Security-Policy "media-src 'self'; object-src 'none'; script-src 'self' https://www.google.com https://apis.google.com https://maps.googleapis.com https://platform.twitter.com https://connect.facebook.net https://www.gstatic.com; report-uri /csp-violation-report-endpoint/"
+Header always set Content-Security-Policy "media-src 'self'; object-src 'none'"
 Header edit Set-Cookie ^(.*)$ $1;HttpOnly;Secure
 
 <IfModule mod_headers.c>
