--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ Options -Indexes
 Header append X-FRAME-OPTIONS "DENY"
 Header always set X-XSS-Protection "1; mode=block"
 Header always set X-Content-Type-Options "nosniff"
-Header always set Content-Security-Policy "upgrade-insecure-requests; default-src 'self'; object-src 'none'; frame-ancestors 'none'"
+Header always set Content-Security-Policy "upgrade-insecure-requests; media-src 'self'; object-src 'none'; frame-ancestors 'none'"
 Header edit Set-Cookie ^(.*)$ $1;HttpOnly;Secure
 
 <IfModule mod_headers.c>
